--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://chady.dev"
+baseURL = "https://www.cihatyildiz.com"
 languageCode = "en-us"
 title = "Cihat Yildiz"
 theme = "anubis"
