--- a/config.toml
+++ b/config.toml
@@ -36,7 +36,7 @@ url = "https://www.linkedin.com/in/cihatyildiz/"
 
 [[params.social]]
 id = "github"
-url = "https://github.com/mitrichius/hugo-theme-anubis"
+url = "https://github.com/cihatyildiz/"
 
 [menu]
 
